--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "image-size": "^0.8.3"
+    "image-size": "^0.8.3",
+    "mysql": "^2.17.1"
   }
 }
